k8s/approval-processing-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: approval-processing-service
  namespace: erp
spec:
  selector:
    matchLabels:
      app: approval-processing-service
  template:
    metadata:
      labels:
        app: approval-processing-service
    spec:
      containers:
      - name: approval-processing-service
        image: ghcr.io/dream2405/approval_processing_service:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
        - containerPort: 9091
