k8s/approval-request-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: approval-request-service
  namespace: erp
spec:
  selector:
    matchLabels:
      app: approval-request-service
  template:
    metadata:
      labels:
        app: approval-request-service
    spec:
      containers:
      - name: approval-request-service
        image: ghcr.io/dream2405/approval_request_service:0.0.1-SNAPSHOT
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
        - containerPort: 9090
