k8s/employee-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-service
  namespace: erp
spec:
  selector:
    matchLabels:
      app: employee-service
  template:
    metadata:
      labels:
        app: employee-service
    spec:
      containers:
      - name: employee-service
        image: ghcr.io/dream2405/employee_service:0.0.1-SNAPSHOT
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
