k8s/notification-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: erp
spec:
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: ghcr.io/dream2405/notification_service:0.0.1-SNAPSHOT
        imagePullPolicy: Never
        ports:
        - containerPort: 8082
