k8s/employee-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  namespace: erp
spec:
  selector:
    app: employee-service
  ports:
  - port: 8080
    targetPort: 8080
